wordpress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1 #extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    # - host: app.game.aws.test
    -  http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: wordpress-svc
                port:
                  number: 80
